apps/staging/grampsweb/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grampsweb
  namespace: grampsweb
spec:
  parentRefs:
    - name: lan-gateway
      namespace: lan-gateway
      sectionName: lan-https
    - name: lan-gateway
      namespace: lan-gateway
      sectionName: lan-http
  hostnames:
    - "grampsweb.raymondcollazo.com"
  rules:
    - backendRefs:
        - name: grampsweb
          port: 5000
